objects/SFDC_Change_History__c.object
<CustomObject>
    <fields>
        <fullName>New__c</fullName>
        <label>New</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Old__c</fullName>
        <label>Old</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SFDC_Project__c</fullName>
        <label>SFDC Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Change Histories</relationshipLabel>
        <relationshipName>Change_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>diff__c</fullName>
        <label>diff</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Change History</label>
    <nameField>
        <displayFormat>CHG-{0000}</displayFormat>
        <label>Change History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>